fixed header overflow issue

--- a/src/sass/05-components/_header.scss
+++ b/src/sass/05-components/_header.scss
@@ -23,8 +23,10 @@
 
             
         }
+    }
 
-        
+    &__background {
+        overflow-x: hidden;
     }
 
     &.-collapse {
